--- a/05-poly-splines.Rmd
+++ b/05-poly-splines.Rmd
@@ -176,7 +176,7 @@ t1
 
 The idea is that once you hit the knot your value stays the same. Same logic for the second knot, until you get to that knot you dont have a trajectory. 
 
-
+###incremental curves
 This can be contrasted with a different type of coding, called incremental. Here the first trajectory keeps going, whereas the second trajectory starts at the position of the knot. 
 
 ```{r}
@@ -194,18 +194,9 @@ In the first, the two slope coefficients represent the actual slope in the respe
 
 In the second, the coefficient for time 2 represents the deviation from the slope in period 1. The positive of this second method is you can easily test whether these two slopes are different from one another. 
 
-```{r}
-
-personality$time1 <- recode(personality$wave, '1' = 0 , '2' = 1,  '3' = 1, '4' = 1,'5' = 1)      
-personality$time2 <- recode(personality$wave, '1' = 0 , '2' = 0,  '3' = 1, '4' = 2,'5' = 3) 
-
-
-```
-
-
 level 1: 
 
-$$ {Y}_{ij} = \beta_{0j}  + \beta_{1j}Time1_{ij}} + \beta_{2j}Time2_{ij} + \varepsilon_{ij} $$
+$$ {Y}_{ij} = \beta_{0j}  + \beta_{1j}Time1_{ij} + \beta_{2j}Time2_{ij} + \varepsilon_{ij} $$
 
 
 
@@ -215,6 +206,18 @@ $$ {\beta}_{0j} = \gamma_{00} +  U_{0j} $$
 
 $$ {\beta}_{1j} = \gamma_{10} +  U_{1j} $$ 
 $$ {\beta}_{2j} = \gamma_{20} +  U_{2j} $$ 
+
+
+
+###splines example
+```{r}
+
+personality$time1 <- recode(personality$wave, '1' = 0 , '2' = 1,  '3' = 1, '4' = 1,'5' = 1)      
+personality$time2 <- recode(personality$wave, '1' = 0 , '2' = 0,  '3' = 1, '4' = 2,'5' = 3) 
+
+
+```
+
 
 
 
@@ -232,7 +235,7 @@ gg5
 ```
 
 
-### splines + polynomail = polynomial piecewise
+## splines + polynomail = polynomial piecewise
 
 
 $$ {Y}_{ij} = \beta_{0j}  + \beta_{1j}Time1_{ij} +  \beta_{2j}Time1_{ij}^2 + \beta_{3j}Time2_{ij} + \varepsilon_{ij} $$
